--- a/demoz_app/pubspec.yaml
+++ b/demoz_app/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   firebase_core: ^3.4.0
   firebase_auth: ^5.2.0
   google_sign_in: ^6.2.1
+  flutter_bloc: ^8.1.6
+  shared_preferences: ^2.3.2
+  equatable: ^2.0.5
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -62,9 +66,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    # - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
