--- a/demoz_app/pubspec.yaml
+++ b/demoz_app/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   firebase_core: ^3.4.0
   firebase_auth: ^5.2.0
+  cloud_firestore: ^5.3.0
   google_sign_in: ^6.2.1
   flutter_bloc: ^8.1.6
   shared_preferences: ^2.3.2
