home page and management page completed

--- a/demoz_app/pubspec.yaml
+++ b/demoz_app/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   shared_preferences: ^2.3.2
   equatable: ^2.0.5
   shimmer: ^3.0.0
+  fl_chart: ^0.69.0
 
 dev_dependencies:
   flutter_test:
